--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -19,7 +19,7 @@ This DAG model works well over source code, but falls short when applied to comp
 The binary analysis tool Jakstab~\cite{jakstab} focuses on the co-dependency of value analysis and lifting. 
 It takes the approach of running these two analyses to a fixed point, and provides a hook for user-defined analyses to run on each iteration.
 The graph of execution dependencies looks like a single cycle because Jakstab does not explicitly encode analysis dependencies.
-The Jakstab approach is undoubtably a step forwards.
+The Jakstab approach is undoubtedly a step forwards.
 However, it still causes unnecessary recalculation and places a form of monotonicity requirements on analyses in order to remain correct.
 A natural extension is to allow the expression of dependencies, as in LLVM, but also cycles, as in Jakstab.
 We investigate this full graph model of analysis management in this thesis.
