--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -67,11 +67,15 @@
 % Funding sources
 This thesis work was advised by David Brumley.
 Other members of the committee include Frank Pfenning (CMU CS), Manuel Egele (BU ECE), and Lujo Bauer (CMU ECE).
+Special thanks goes to Frank Pfenning for all his feedback given during the final revisions period.
+
+I would like to thank Maverick Woo for our discussions on multi-valued logic which helped give rise to circumscription, and general support throughout my PhD career.
+Thanks to Kyle Soska and Mike Annichiarico, for listening to my ideas and acting as sounding boards.
+
+I'd also like to thank in no particular order Patrick Xia, Michael Sullivan, Ben Blum, Michael Artzenius, Chris Lu, Mike Kaye, and Jasmine Sears for helping me remain sane throughout my time in grad school.
 
 This work was funded by DARPA award N660011324040 and NSF award DGE1419362.
 The views and opinions of authors expressed herein do not necessarily state or reflect those of the United States Government or any agency thereof.
-
-% Also want to thank Maverick, Kyle, who else? This stuff can go in during the final revisions period though.
 
 \newpage
 
